---
source: crates/bitnet-cli/tests/cli_snapshot_tests.rs
assertion_line: 57
expression: help
---
BitNet-rs CLI - one-shot generation and chat with strict receipts

QUICK EXAMPLES:

  # Deterministic math sanity check (validates model correctness)
  RUST_LOG=warn bitnet run --model model.gguf --tokenizer tokenizer.json \
    --prompt "Answer with a single digit: 2+2=" --max-tokens 1 --temperature 0.0 --greedy

  # General Q&A with instruct template
  RUST_LOG=warn bitnet run --model model.gguf --tokenizer tokenizer.json \
    --prompt "What is 2+2?" --max-tokens 16 --temperature 0.0 --greedy

  # Creative completion (nucleus sampling)
  RUST_LOG=warn bitnet run --model model.gguf --tokenizer tokenizer.json \
    --prompt "Explain photosynthesis" --max-tokens 128 --temperature 0.7 --top-p 0.95

  # Interactive chat (auto-detects template, clean output)
  RUST_LOG=warn bitnet chat --model model.gguf --tokenizer tokenizer.json

  # Apple M4 local answer path: CPU/NEON is the reliable user-facing route today.
  # The JSON receipt records requested_backend, selected_backend, runtime_api, and fallback_used.
  RUST_LOG=warn bitnet --device apple-m4-cpu-neon run \
    --model models/BitNet-b1.58-2B-4T/ggml-model-i2_s.gguf \
    --prompt "What is 2+2? Answer briefly." --max-tokens 32 \
    --temperature 0.0 --greedy --deterministic \
    --strict-loader --strict-tokenizer --json-out local-answer-cpu-neon.json

APPLE M4 ROUTING:
  apple-m4-cpu-neon: reliable local-answer path with strict receipts.
  apple-m4-metal: receipt-backed Metal phase/subgraph proof only unless a strict
    full-model Metal receipt later proves more.
  apple-m4-mpsgraph: graph/reference lane, not native Metal or Neural Engine proof.

LOGGING:
  Set RUST_LOG=warn (default: info) to reduce log noise and focus on generated text.
  Options: error, warn, info, debug, trace

PERFORMANCE:
  For best CPU throughput, build with:
    RUSTFLAGS="-C target-cpu=native -C opt-level=3 -C lto=thin" \
      cargo build --release --features cpu

  Run with:
    RAYON_NUM_THREADS=$(nproc) RUST_LOG=warn bitnet run ...

  QK256 Models (I2_S quantization):
    - Without AVX2: ~0.1 tok/s (scalar kernels, ~10s per token)
    - With AVX2: ~1.2x faster (optimized kernels)
    - For quick validation: use --max-tokens 4-16
    - SIMD optimizations (>=3x faster) coming in v0.2.0


Usage: bitnet [OPTIONS] [COMMAND]

Commands:
  run
          Run simple text generation
  ask
          Ask one question using the answer-readiness generation path
  model
          Fetch, verify, list, and prune supported local model artifacts
  mac
          Mac-oriented SLM check, ask, validate, and receipt-check wrappers
  tokenize
          Tokenize text and output token IDs as JSON
  prompt-authority-audit
          Emit a BitNet prompt/token authority audit receipt without running inference
  score
          Calculate perplexity score for a model
  inference
          Run inference on a model
  chat
          Interactive chat mode (streaming)
  answer-corpus
          Run the fixed CPU answer-readiness corpus through the `run` surface
  answer-parity
          Compare answer-corpus receipts for backend parity diagnostics
  reference-compare
          Validate an external-reference divergence artifact
  first-token-divergence
          Classify first-token divergence from external reference and 258V CPU receipts
  external-reference-instrumentation
          Classify external reference token/logit instrumentation coverage
  dense-gguf-linear-parity
          Extract one dense GGUF linear fixture and run strict CUDA parity diagnostics
  dense-gguf-linear-role-sweep
          Extract several dense GGUF linear fixtures and run strict CUDA parity diagnostics
  dense-gguf-one-layer-plan
          Emit a dense GGUF one-layer strict CUDA planner gap receipt
  dense-gguf-norm-fixture
          Extract dense GGUF RMSNorm fixtures and emit a CPU-reference receipt
  dense-gguf-norm-cuda-parity
          Extract dense GGUF RMSNorm fixtures and run strict CUDA parity diagnostics
  dense-gguf-rope-cuda-parity
          Run dense GGUF RoPE strict CUDA parity diagnostics
  dense-gguf-attention-score-fixture
          Extract a dense GGUF attention-score fixture and emit a CPU-reference receipt
  dense-gguf-attention-softmax-fixture
          Extract a dense GGUF attention-softmax fixture and emit a CPU-reference receipt
  dense-gguf-attention-v-mix-fixture
          Extract a dense GGUF attention V-mix fixture and emit a CPU-reference receipt
  dense-gguf-mlp-activation-fixture
          Extract a dense GGUF MLP activation fixture and emit a CPU-reference receipt
  dense-gguf-mlp-activation-cuda-parity
          Run dense GGUF MLP activation strict CUDA parity diagnostics
  dense-gguf-attention-softmax-cuda-parity
          Run dense GGUF attention-softmax strict CUDA parity diagnostics
  dense-gguf-attention-v-mix-cuda-parity
          Run dense GGUF attention V-mix strict CUDA parity diagnostics
  dense-gguf-attention-score-cuda-parity
          Run dense GGUF attention-score strict CUDA parity diagnostics
  receipts
          Explain BitNet-rs JSON receipts and claim boundaries
  slm-warm-session
          Run multiple SLM prompts in one warm process with one model/tokenizer load
  cuda-warm-session
          Run strict RTX 5070 Ti CUDA prompts in one warm BitNet process
  cpu-phase-warm-session
          Run 258V CPU phase prompts in one warm strict BitNet process
  convert
          Convert between model formats
  benchmark
          Benchmark model performance
  serve
          Start inference server
  config
          Manage configuration
  info
          Show system information
  device-smoke
          Probe selected device identity without launching kernels
  lunar-lake-probe
          Probe Lunar Lake 258V platform visibility without launching kernels
  intel-npu-probe
          Probe Intel NPU OpenVINO runtime visibility without compiling graphs
  intel-npu-smoke
          Run a tiny static OpenVINO NPU graph smoke without BitNet inference
  intel-npu-bitnet-subgraph
          Run selected static BitNet subgraph parity on OpenVINO NPU
  intel-npu-bitnet-linear-subgraph
          Run static BitNet linear-projection subgraph parity on OpenVINO NPU
  intel-npu-bitnet-ffn-subgraph
          Run static BitNet FFN/ReLU2 subgraph parity on OpenVINO NPU
  intel-arc-140v-openvino-gpu-smoke
          Run a tiny static OpenVINO GPU.0 graph smoke for Arc 140V
  intel-arc-140v-opencl-smoke
          Run a tiny native OpenCL kernel smoke for Arc 140V
  intel-arc-140v-opencl-parity
          Run a native OpenCL CPU-reference parity kernel for Arc 140V
  validate
          Run validation-only preflight checks
  cuda-smoke
          Compile and launch a tiny CUDA vector-add kernel
  inspect
          Inspect model metadata and diagnostics
  compat-check
          Check GGUF file compatibility using header validation
  list-architectures
          List all supported model architectures
  list-templates
          List all available prompt templates
  help
          Print this message or the help of the given subcommand(s)

Options:
  -c, --config <PATH>
          Configuration file path

  -d, --device <DEVICE>
          Device/backend label (cpu, cuda/gpu, hip/rocm, oneapi, npu/openvino-npu, nvidia-rtx-5070-ti-cuda/wgpu, metal/mpsgraph, apple-m4-metal, apple-m4-mpsgraph, apple-m4-cpu-neon, auto). Apple M4 labels are distinct proof lanes

      --log-level <LEVEL>
          Log level (trace, debug, info, warn, error)

      --threads <N>
          Number of CPU threads

      --batch-size <SIZE>
          Batch size for processing

      --completions <SHELL>
          Generate shell completions

          [possible values: bash, elvish, fish, powershell, zsh]

      --save-config <PATH>
          Write the effective configuration to a file and exit

      --interface-version
          Print CLI interface version and exit

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

CLI Interface Version: 1.0.0
Docs: https://docs.rs/bitnet
Issues: https://github.com/EffortlessMetrics/BitNet-rs/issues
